# reboot-boutique

./: .gitignore  .mypy.ini  .pytest.ini  .rbtrc  .rsmrc  BUILD.bazel  Dockerfile  README.md  readme_test.sh
.tests/: test.sh
api/: BUILD.bazel  demo.proto
api/boutique/v1/: demo.proto
api/v1/: demo.proto
backend/: BUILD.bazel  app.py  constants.py  logger.py
backend/cart/: BUILD.bazel  servicer.py
backend/checkout/: BUILD.bazel  servicer.py
backend/currencyconverter/: BUILD.bazel  servicer.py
backend/emailer/: BUILD.bazel  servicer.py
backend/helpers/: BUILD.bazel  mailgun.py
backend/productcatalog/: BUILD.bazel  servicer.py
backend/shipping/: BUILD.bazel  servicer.py
backend/src/: logger.py  main.py
backend/src/cart/: servicer.py
backend/src/checkout/: servicer.py
backend/src/currencyconverter/: servicer.py
backend/src/productcatalog/: servicer.py
backend/src/shipping/: servicer.py
backend/tests/: full_app_test.py
tests/: BUILD.bazel  cart_test.py  emailer_test.py  full_app_test.py
web/: .gitignore  package-lock.json  package.json  tsconfig.json
web/proto/: demo.proto
web/proto/resemble/v1alpha1/: options.proto  tasks.proto
web/public/: index.html
web/src/: App.tsx  Cart.tsx  Footer.tsx  Header.tsx  HomePage.tsx  PastOrders.tsx  Product.tsx  ResembleClientProvider.tsx  helpers.ts  index.tsx
