load("@com_github_reboot_dev_respect//resemble:rules.bzl", "ts_resemble_files_in_source_tree")

ts_resemble_files_in_source_tree(
    name = "gen_ts",
    srcs = ["//resemble/boutique/api:demo.proto"],
    write_path = "web/src/gen/demo_rsm.ts",
    deps = [
        "//resemble/boutique/api:demo_proto",
        # We must unfortunately repeat the dependencies of `:greeter_proto`
        # AND all of the dependencies' dependencies also.
        # TODO(rjh): fix that.
        "//resemble/v1alpha1:options_proto",
        "//resemble/v1alpha1:tasks_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@googleapis//google/api:annotations_proto",
        "@googleapis//google/api:http_proto",
        "@com_google_protobuf//:descriptor_proto",
    ],
)

# This rule allows a `bazel` system configured outside of this
# repository to use code in this directory and its subdirectories.
filegroup(
    name = "everything",
    srcs = glob(
        ["**/*"],
        exclude = [
            # Folders that may be created by activity in this repository, such
            # as manually following the steps of the `README.md` file, but which
            # are not part of the "source code" of this repository.
            ".resemble-boutique-venv/**/*",
            ".pytest_cache/**/*",
            "gen/**/*",
        ],
    ),
    visibility = ["//visibility:public"],
)
