load("@com_github_reboot_dev_respect//resemble:rules.bzl", "ts_resemble_files_in_source_tree")

ts_resemble_files_in_source_tree(
    name = "gen_ts",
    srcs = ["//resemble/examples/boutique/api:demo.proto"],
    write_path = "web/src/gen/demo_rsm_react.ts",
    deps = [
        "//resemble/examples/boutique/api:demo_proto",
        # We must unfortunately repeat the dependencies of `:greeter_proto`
        # AND all of the dependencies' dependencies also.
        # TODO(rjh): fix that.
        "//resemble/v1alpha1:options_proto",
        "//resemble/v1alpha1:tasks_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@googleapis//google/api:annotations_proto",
        "@googleapis//google/api:http_proto",
        "@com_google_protobuf//:descriptor_proto",
    ],
)
