load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "constants_py",
    srcs = ["constants.py"],
    visibility = ["//microservices_demo:__subpackages__"],
)

py_library(
    name = "logger_py",
    srcs = ["logger.py"],
    visibility = ["//microservices_demo:__subpackages__"],
)

py_library(
    name = "app_py",
    srcs = ["app.py"],
    visibility = ["//microservices_demo:__subpackages__"],
    deps = [
        "//microservices_demo/api:demo_py_grpc",
        "//microservices_demo/backend:constants_py",
        "//microservices_demo/backend:logger_py",
        "//microservices_demo/backend/cart:servicer_py",
        "//microservices_demo/backend/checkout:servicer_py",
        "//microservices_demo/backend/currencyconverter:servicer_py",
        "//microservices_demo/backend/emailer:servicer_py",
        "//microservices_demo/backend/productcatalog:servicer_py",
        "//microservices_demo/backend/shipping:servicer_py",
        "//resemble:rsm",
        "//resemble/aio:python",
    ],
)

py_binary(
    name = "app",
    srcs = ["app.py"],
    main = "app.py",
    visibility = ["//microservices_demo:__subpackages__"],
    deps = [
        ":app_py",
    ],
)

filegroup(
    name = "app_zip",
    srcs = [":app"],
    output_group = "python_zip_file",
)
