load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "full_app_test_py",
    srcs = [":full_app_test.py"],
    main = "full_app_test.py",
    deps = [
        "//resemble/aio:python",
        "//resemble/boutique/backend:app_py",
        "//resemble/boutique/backend:constants_py",
        "//resemble/boutique/backend/cart:servicer_py",
        "//resemble/boutique/backend/checkout:servicer_py",
        "//resemble/boutique/backend/currencyconverter:servicer_py",
        "//resemble/boutique/backend/emailer:servicer_py",
        "//resemble/boutique/backend/productcatalog:servicer_py",
        "//resemble/boutique/backend/shipping:servicer_py",
    ],
)

py_test(
    name = "cart_test_py",
    srcs = [":cart_test.py"],
    main = "cart_test.py",
    deps = [
        "//resemble/aio:python",
        "//resemble/boutique/backend:app_py",
        "//resemble/boutique/backend:constants_py",
        "//resemble/boutique/backend/cart:servicer_py",
    ],
)

py_test(
    name = "emailer_test_py",
    srcs = [":emailer_test.py"],
    main = "emailer_test.py",
    deps = [
        "//resemble/aio:python",
        "//resemble/boutique/backend:app_py",
        "//resemble/boutique/backend:constants_py",
        "//resemble/boutique/backend/emailer:servicer_py",
    ],
)
