load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "full_app_test_py",
    srcs = [":full_app_test.py"],
    main = "full_app_test.py",
    deps = [
        "//resemble/aio:python",
        "//resemble/examples/boutique/backend:app_py",
        "//resemble/examples/boutique/backend:constants_py",
        "//resemble/examples/boutique/backend/cart:servicer_py",
        "//resemble/examples/boutique/backend/checkout:servicer_py",
        "//resemble/examples/boutique/backend/currencyconverter:servicer_py",
        "//resemble/examples/boutique/backend/emailer:servicer_py",
        "//resemble/examples/boutique/backend/productcatalog:servicer_py",
        "//resemble/examples/boutique/backend/shipping:servicer_py",
    ],
)

py_test(
    name = "cart_test_py",
    srcs = [":cart_test.py"],
    main = "cart_test.py",
    deps = [
        "//resemble/aio:python",
        "//resemble/examples/boutique/backend:app_py",
        "//resemble/examples/boutique/backend:constants_py",
        "//resemble/examples/boutique/backend/cart:servicer_py",
    ],
)

py_test(
    name = "emailer_test_py",
    srcs = [":emailer_test.py"],
    main = "emailer_test.py",
    deps = [
        "//resemble/aio:python",
        "//resemble/examples/boutique/backend:app_py",
        "//resemble/examples/boutique/backend:constants_py",
        "//resemble/examples/boutique/backend/emailer:servicer_py",
    ],
)
