load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "servicer_py",
    srcs = [
        "servicer.py",
    ],
    data = [
        "templates/cart_reminder.html",
    ],
    visibility = ["//resemble/boutique:__subpackages__"],
    deps = [
        "//resemble/boutique/api:demo_py_resemble",
        "//resemble/boutique/backend/helpers:mailgun_py",
    ],
)
