load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "servicer_py",
    srcs = [
        "servicer.py",
    ],
    data = [
        "templates/cart_reminder.html",
    ],
    visibility = ["//resemble/examples/boutique:__subpackages__"],
    deps = [
        "//resemble/examples/boutique/api:demo_py_resemble",
        "//resemble/integrations/mailgun:servicers_py",
        "//resemble/integrations/mailgun/v1:mailgun_py_resemble",
    ],
)
