load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "servicer_py",
    srcs = ["servicer.py"],
    data = [
        "templates/order_confirmation.html",
        "templates/thanks_for_listening_to_demo.html",
    ],
    visibility = ["//microservices_demo:__subpackages__"],
    deps = [
        "//microservices_demo/api:demo_py_resemble",
        "//microservices_demo/backend:constants_py",
        "//microservices_demo/backend:logger_py",
        "//resemble/aio:python",
        "@com_github_reboot_dev_pyprotoc_plugin//pyprotoc_plugin",
    ],
)
