load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "servicer_py",
    srcs = ["servicer.py"],
    data = [
        "templates/order_confirmation.html",
        "templates/thanks_for_listening_to_demo.html",
    ],
    visibility = ["//resemble/boutique:__subpackages__"],
    deps = [
        "//resemble/aio:python",
        "//resemble/boutique/api/v1:demo_py_resemble",
        "//resemble/boutique/backend:constants_py",
        "//resemble/boutique/backend:logger_py",
        "@com_github_reboot_dev_pyprotoc_plugin//pyprotoc_plugin",
    ],
)
