load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "servicer_py",
    srcs = ["servicer.py"],
    data = [
        "templates/order_confirmation.html",
        "templates/thanks_for_listening_to_demo.html",
    ],
    visibility = ["//resemble/examples/boutique:__subpackages__"],
    deps = [
        "//resemble/aio:python",
        "//resemble/aio:secrets_py",
        "//resemble/examples/boutique/api:demo_py_resemble",
        "//resemble/examples/boutique/backend:constants_py",
        "//resemble/examples/boutique/backend:logger_py",
        "//resemble/integrations/mailgun:servicers_py",
        "//resemble/integrations/mailgun/v1:mailgun_py_resemble",
        "@com_github_reboot_dev_pyprotoc_plugin//pyprotoc_plugin",
    ],
)
