load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "servicer_py",
    srcs = ["servicer.py"],
    data = [
        "currency_conversions.json",
    ],
    visibility = ["//microservices_demo:__subpackages__"],
    deps = [
        "//microservices_demo/api:demo_py_grpc",
        "//resemble/aio:python",
    ],
)
