load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "servicer_py",
    srcs = ["servicer.py"],
    data = [
        "products.json",
    ],
    visibility = ["//resemble/boutique:__subpackages__"],
    deps = [
        "//resemble/aio:python",
        "//resemble/boutique/api/v1:demo_py_resemble",
    ],
)
