load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "servicer_py",
    srcs = ["servicer.py"],
    visibility = ["//resemble/examples/boutique:__subpackages__"],
    deps = [
        "//resemble/aio:python",
        "//resemble/examples/boutique/api:demo_py_resemble",
    ],
)
